# music-recommender-system

./: .app.py.swp  README.md  app.py  gunicorn_config.py  package.json  pyproject.toml  recommender_api.py  user.getRecentTracks
frontend/: app.js  index.html  recommender_api.py  script.js  style.css  styles.css
idea/: modules.xml  muisc.xml
idea/inspectionProfiles/: Project_Default.xml
lastFMdata/: .artists.dat.swo  .artists.dat.swp
musiccollaborativefiltering/: .data.py.swo  .data.py.swp  data.py  recommender.py
recommender-backend/: recommender.py
recommenderbackend/: app.py  data.py  recommender.py
templates/: index.html
