[tool.poetry]
name = "musiccollaborativefiltering"
version = "0.1.0"
description = "Music Recommender System using Collaborative Filtering"
authors = ["Walaakhkh <Walaakhalil98@@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.5.2"
implicit = "0.6.1"
black = "^22.1.0"

[tool.black]
line-length = 79
exclude = '''
/(
	\.git
| _build
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
